tests/baselines/reference/unionThisTypeInFunctions.errors.txt
unionThisTypeInFunctions.ts(10,5): error TS2684: The 'this' context of type 'Real | Fake' is not assignable to method's 'this' of type 'Real & Fake'.
  Type 'Real' is not assignable to type 'Real & Fake'.
    Type 'Real' is not assignable to type 'Fake'.
      Types of property 'data' are incompatible.
        Type 'string' is not assignable to type 'number'.


==== unionThisTypeInFunctions.ts (1 errors) ====
    interface Real {
        method(this: this, n: number): void;
        data: string;
    }
    interface Fake {
        method(this: this, n: number): void;
        data: number;
    }
    function test(r: Real | Fake) {
        r.method(12); // error
        ~
!!! error TS2684: The 'this' context of type 'Real | Fake' is not assignable to method's 'this' of type 'Real & Fake'.
!!! error TS2684:   Type 'Real' is not assignable to type 'Real & Fake'.
!!! error TS2684:     Type 'Real' is not assignable to type 'Fake'.
!!! error TS2684:       Types of property 'data' are incompatible.
!!! error TS2684:         Type 'string' is not assignable to type 'number'.
    }
    